# glossAnon

./: pyproject.toml
src/: __init__.py  types.py
src/glossanon/: __init__.py  config.py  resources.py  types.py
